# SoftwareRendering

./: .gitignore  .gitmodules  3D_CONCEPTS_CHECKLIST.md  CMakeLists.txt  build.bat  build.sh  build_GCC.bat  ishak_buffer.c  project.4coder  run.bat  run.sh  setup_cl_generic.bat  todo.txt
source/: apple_dynamic_code_loading.c  application.c  application_defines.h  base_includes.h  camera_defines.h  display.c  display_config.h  display_defines.h  engine.c  engine_data.h  engine_defines.h  entities_temp.c  external_defines.h  file_reader.c  file_reader_defines.h  framework_includes.h  framework_source.c  input.c  ishak_arena.c  ishak_arena.h  ishak_buffer.c  ishak_buffer.h  ishak_list.c  ishak_list.h  ishak_string.c  ishak_string.h  light.c  light_defines.h  literal_textures.h  main.c  math_helpers.h  memory.h  mesh.c  mesh.h  mesh_defines.h  mesh_importer.c  mesh_importer_defines.h  platform_dynamic_loading.c  renderer.c  renderer_defines.h  (+11 more)
source/.claude/: settings.local.json
source/SDL/: SDL_haptic.h  SDL_opengl_glext.h  SDL_opengles2_gl2ext.h  SDL_video.h
